# doppelganger

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml
doppelganger/: types.py
doppelganger/notices/: __init__.py  _notices.py  fermigbm.py
doppelganger/rubin/: inject.py  utils.py
doppelganger/scripts/: tunein.py
notebooks/: 03_dp02_visits_MOC.ipynb  05_dp02_sourceDetection_masks.ipynb  05_sourceDetection_masks.ipynb  06_detectionSim_sourceCatalog.ipynb  06_dp02_detectionSim_sourceCatalog.ipynb  06_sourceCatalogSim.ipynb  07_detectionSim_seekFetchInjectSubtract.ipynb  08_detectionSim_anomalyDetection.ipynb  09_dp02_detectionSim_analysis.ipynb  10_detection_config.ipynb  11_dp1_swift.ipynb  12_afterglowpy.ipynb  14_dp1_diaSource_KDTree.ipynb  15_dp1_diaSource_Graph_Simbad.ipynb  16_dp1_toydataset.ipynb  250721_detection_config.ipynb  README.md  sourceDetection_masks.ipynb
notebooks/data/06_sourceCatalogSim/: afterglow_host.csv  hosts.csv  shortgrb_offaxis_table.txt
scripts/: tunein.py
tests/: test_notices_gbm.py
