
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doppelganger"
description = "Tools for searching LSST data for optical counterparts to high-energy transients."
keywords = ["astrophysics", "lsst"]
version = "0.1.0"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
    { name="Giuseppe Altavilla", email="giuseppe.altavilla@inaf.it" },
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gcn-kafka~=0.3",
    "click~=8.1",
    "rich~=14.0",
]

[project.optional-dependencies]
dev = [
    "pyinstrument~=5.0",
    "black~=24.10",
    "isort~=5.13",
    "ipython~=8.31",
]

[project.scripts]
tunein = 'scripts.tunein:main'